--- a/index.html
+++ b/index.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Vanilla JS Template</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <title>Xinyue Mao - Vanilla JS</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+        crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<header class="container">
-  <div class="row">
-    <h1 class="col">Vanilla Template</h1>
+<header class="container py-4">
+  <div class="row align-items-center">
+    <div class="col">
+      <h1 class="mb-1">Vanilla JS</h1>
+      <p class="mb-0">
+        <strong>Name:</strong> Xinyue Mao
+        <span class="mx-2">|</span>
+        <strong>Uniqname:</strong> xymao
+      </p>
+    </div>
   </div>
 </header>
-  <main class="container">
-    Main Content
-  </main>
-  <script src="js/script.js" defer></script>
+
+<main class="container">
+  <section class="p-4 bg-light border rounded">
+    <h2 class="h4 mb-3">Click Counter</h2>
+    <p class="mb-3">A simple interaction using concepts from class.</p>
+
+    <div class="d-flex align-items-center gap-3">
+      <button id="count-btn" class="btn btn-primary" type="button">
+        Click me
+      </button>
+      <span id="count-display" class="fs-5">0</span>
+    </div>
+  </section>
+</main>
+
+<script src="js/script.js" defer></script>
 </body>
 </html>
