--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Vanilla Template</title>
+  <title>Vanilla JS Template</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
         crossorigin="anonymous">
@@ -13,7 +13,7 @@
 <header class="container py-4">
   <div class="row align-items-center">
     <div class="col">
-      <h1 class="mb-1">Vanilla JS Mini Interactive Page</h1>
+      <h1 class="mb-1">Vanilla Template</h1>
       <p class="mb-0">
         <strong>Name:</strong> Xinyue Mao
         <span class="mx-2">|</span>
