vanilla js publish

--- a/index.html
+++ b/index.html
@@ -24,18 +24,14 @@
 </header>
 
 <main class="container">
-  <section class="p-4 bg-light border rounded">
-    <h2 class="h4 mb-3">Click Counter</h2>
-    <p class="mb-3">A simple interaction using concepts from class.</p>
-
-    <div class="d-flex align-items-center gap-3">
-      <button id="count-btn" class="btn btn-primary" type="button">
-        Click me
-      </button>
-      <span id="count-display" class="fs-5">0</span>
-    </div>
-  </section>
+  Main Content
 </main>
+
+<section class="container mt-4">
+  <h2 class="h4">Click Counter</h2>
+  <button id="count-btn" class="btn btn-primary" type="button">Click me</button>
+  <span id="count-display" class="ms-2">0</span>
+</section>
 
 <script src="js/script.js" defer></script>
 </body>
